Fixed Tiling Images Issue on Projects Page
Added a max width to the tiles container to fix images repeating because
they are too large.

--- a/new/css/project-page.css
+++ b/new/css/project-page.css
@@ -24,6 +24,7 @@
 
 #tiles {
     width: 70%;
+    max-width: 800px;
     margin-bottom: 2.5%;
 }
 
